feat: edit documentation
