# docs/swagger/swagger.json
@@ -78,8 +78,8 @@
                             "$ref": "#/definitions/internal_httpserver.ErrorResponse"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
+                    "405": {
+                        "description": "Method Not Allowed",
                         "schema": {
                             "$ref": "#/definitions/internal_httpserver.ErrorResponse"
                         }
